<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1" >

    <Button
        android:id="@+id/button2"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:text="@string/toast_gravity" />
    <Space />

    <Button
        android:id="@+id/button1"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:text="@string/toast_normal" />

    <Button
        android:id="@+id/button3"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="0"
        android:text="@string/toast_personalizado" />

</GridLayout>